--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,18 @@
 {
   "liveServer.settings.root": "/",
-  "liveServer.settings.host": "127.0.0.1",
   "liveServer.settings.port": 5500,
+  "liveServer.settings.ignoreFiles": [
+    ".vscode/**",
+    "**/*.scss",
+    "**/*.sass",
+    "**/*.ts"
+  ],
   "liveServer.settings.mount": [
     ["/krds", "${workspaceFolder}/krds"],
     ["/_common", "${workspaceFolder}/_common"],
     ["/adm", "${workspaceFolder}/adm"],
     ["/kr", "${workspaceFolder}/kr"]
   ],
-  "liveServer.settings.wait": 300
+  "liveServer.settings.file": "index.html",
+  "liveServer.settings.wait": 500
 }
